--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Alexandria {{title}}</title>   
+  <title>SOMAR | {{title}}</title>   
 
   <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../static/icons/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="page-bg">
@@ -26,13 +26,12 @@
   
   <script src="{% static 'js/index.js' %}"></script>
 
-  <div id="layoutSidenav" class="sidenav">
+  <div id="layoutSidenav" class="sidenav" style="font-weight: 200;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="{%url 'home'%}">Inicio</a>
     <a href="{%url 'projects'%}">Projetos</a>
-    <a href="{%url 'news'%}">Novidades</a>
+    {% comment %} <a href="{%url 'news'%}">Novidades</a> {% endcomment %}
     <a href="{%url 'about'%}">Sobre o Projeto SOMAR</a>
-    <a href="{%url 'about_us'%}">Sobre Nós</a>
     <a href="{%url 'contact'%}">Contato</a>
   </div>
 
@@ -42,7 +41,7 @@
     {% endblock %}
 
   <footer class="footer">
-    <div style="background-color: #17fc0350; position:fixed; bottom: 5px; left: 5px; width:fit-content; height:fit-content;"><p style="padding:2px; padding-bottom:0px;"> ALPHA </p></div>
+    <div style="background-color: #17fc0350; position:fixed; bottom: .5vw; left: .5vw; width:fit-content; height:fit-content;"><p style="padding:.5vw; padding-bottom:0px; font-size: 1vw;"> ALPHA </p></div>
   </footer>
 </body>
 </html>
