Added image functionality to projects and added a project count for each individual ODS

--- a/alexandria/alexandria_site/templates/alexandria_site/home.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/home.html
@@ -9,16 +9,16 @@
 </div>
 <hr class="theme-break">
 <div class="content">
-    <div class="content-section center" style="border: 0.1vw solid #5cc4dc; border-radius: 2vw;">
-        <p class="title"> O que é o Programa SOMAR? </p>
+    <div class="content-section center" style="border: 0.1vw solid #5cc4dc; border-radius: 1vw; text-align: center;">
+        <p class="title"> Sobre o Programa SOMAR</p>
         <p style="font-size: 1.7vw; padding:20px;">O SOMAR é um programa de impacto social do Sistema Fecomércio-RS/Sesc/Senac. <br> Por meio dele, serão executados projetos que transformem realidades das comunidades em que o sistema atua e que contribuam para os Objetivos de Desenvolvimento Sustentável, da ONU e bandeiras Fecomércio.
             Possuem como objetivo final a transformação de uma realidade vigente, sempre levando em consideração as questões sociais, ambientais e de governança das instituições. Sua execução está atrelada aos serviços ofertados pelo Sistema e seus públicos atendidos.
             São potencializados em parceria com outras partes interessadas, fortalecendo a imagem e o protagonismo do Sistema Comércio.</p>
-    </div>
-    <div class="content-section center" style="border: 0.1vw solid #5cc4dc; border-radius: 2vw; text-align: center;">
-        <p class="title"> Onde posso encontrar os projetos executados pelo SOMAR? </p>
+        <br><hr>
+        <p class="title"> Onde encontrar os projetos executados pelo SOMAR? </p>
         <p style="font-size: 1.7vw; padding:20px;"> Em nossa página de projetos, onde todos são categorizados de acordo com o Objetivo de Desenvolvimento Social em que se encaixam.</p>
         <a href="{%url 'projects'%}"> <button class="link-button"> Projetos </button></a>
+        <br>
     </div>
     
 </div>
