--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -139,6 +139,7 @@ hr {
 }
 
 .footer{
+  position:static;
   margin-top: 2em;
   background-color: var(--medium);
   box-shadow: 0px -2px 30px var(--shadow);
@@ -146,6 +147,7 @@ hr {
   width: 100vw;
   height: 80px;
   bottom: 0;
+  left: 0;
   z-index: 998;
 }
 
@@ -390,9 +392,9 @@ hr {
 
 .link-button{
   background-color: var(--button);
-  width: 70%; height: 10vh; 
+  width: 30%; height: 10vh; 
   font-size: 2.5vw; 
-  margin: 2vw; 
+  margin: 2vw;
   font-family: roboto;
   font-weight: 200;
   color: white;
@@ -538,6 +540,48 @@ hr {
 
 }
 
+.project-images{
+  display: flex;
+  flex-wrap: nowrap;
+  
+
+  gap: 3vw;
+  align-items: center;
+  justify-content: center;
+
+  margin-inline: 10vw;
+
+
+  height: 25vw; 
+
+}
+
+.project-images a{
+  max-height: 100%;
+  
+
+  max-width: calc(100% / 3);
+  cursor: pointer;
+
+  transition: 200ms;
+}
+
+.project-images a:hover{
+  transform: scale(1.2);  
+  margin: 2rem;
+}
+
+.project-images a img{
+  border: .2rem solid var(--dark);
+  border-radius: .5rem;
+  display: block;
+  max-height: 100%;
+  max-width: 100%;
+
+  object-fit: fill;
+}
+
+
 .project-ods, .project-city, .project-cause{
   /* font-style: italic; */
   text-decoration: underline .1vw solid grey;
@@ -550,5 +594,23 @@ hr {
 @media only screen and (max-width: 768px) {
   p {
     font-size: 1.2em;
+  }
+
+  .project-images{
+    flex-direction: column;
+    align-items: space-around;
+    justify-content: space-around;
+
+    gap: 5vh;
+
+    width: 45vw;
+
+    margin-inline: auto;
+
+    height: fit-content;  
+  }
+
+  .project-images a{
+    max-width: 100%;
   }
 }
