--- a/alexandria/alexandria_site/templates/alexandria_site/about.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/about.html
@@ -1,9 +1,9 @@
 {% extends 'alexandria_site/layout.html' %}
 
 {% block content %}
-    <div class="about"><div class="image"><img src="../static/stock.jpg"></img></div> 
+    <div class="content-section" style="display: flex; gap: 5rem; margin-inline: 5rem; justify-content: center;">
         <div class="text">
-            <h1 style="font-size:50px; text-align:center;">Lorem Ipsum</h1>
+            <h1 style="font-size:3rem; text-align:center;">Lorem Ipsum</h1>
             <br><br>
             <p>
 
@@ -17,5 +17,6 @@
                 
                 <br><br>Fusce sit amet nisi at libero iaculis maximus. Morbi sed vehicula eros. Nulla vulputate lorem hendrerit feugiat porta. Fusce bibendum magna nunc, a bibendum mauris feugiat ac. Proin ac mattis est. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum congue hendrerit maximus. Vivamus quis risus elit. Vivamus vestibulum rutrum ligula, in consectetur tellus ultricies et. Aenean fringilla auctor lacus, hendrerit porta turpis elementum in. Donec et augue sit amet libero viverra convallis. Etiam feugiat, nunc et facilisis viverra, velit risus sollicitudin diam, at congue urna ex sit amet orci. In et sapien nisi. Quisque consectetur lacus a ex varius, eu auctor est tristique. </p>
         </div>
+        <div class="image"><img src="../static/stock.jpg"></img></div> 
     </div>
 {% endblock %}
