--- a/alexandria/alexandria_site/templates/alexandria_site/project_page.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/project_page.html
@@ -1,7 +1,7 @@
 {% extends 'alexandria_site/layout.html' %}
 
 {% block content %}
-<div style="font-family:roboto; font-size: 1.7vw;">
+<div style="font-family:roboto; font-size: calc(var(--fontSize) * 0.02);">
     <p class="title" style="text-align: center; margin-top: 8vh;">{{project}}</p>
     <hr>
     <div class="project-info">
@@ -14,7 +14,7 @@
         </div>
 
     </div>
-    <div class="content-section" style="background-color: #3181c60b;margin: 0 auto; margin-top: 5vh; margin-bottom: 10vh; max-width: 80vw; font-size: .9em;">
+    <div class="content-section" style="background-color: #3181c60b;margin: 0 auto; margin-top: 5vh; margin-bottom: 10vh; max-width: 80vw; font-size: calc(var(--fontSize) * 0.015);">
             {{project.about|linebreaks}} 
     </div>
     <hr>
@@ -36,7 +36,7 @@
                     {% for partner in partners %}
                         <div style="text-align: center">
                             <img src="a" width="100vw;"/><br>
-                            <sub style="font-size: 2vw;">
+                            <sub style="font-size: 2rem;">
                                 {{partner.name}}
                             </sub>
                         </div>
