--- a/alexandria/alexandria_site/templates/alexandria_site/home.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/home.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 <div class="home-banner" style="position:relative;" id="homeBanner">
-    <p style="font-weight: thin; font-style: italic; font-size: 7vw; position: absolute; color: #e9ffde; top: 40%; left: 5%; z-index: 20; opacity: 70%; font-family: roboto; ">
+    <p style="font-weight: thin; font-style: italic; font-size: 8rem; position: absolute; color: #e9ffde; top: 40%; z-index: 20; opacity: 70%; font-family: roboto; width: 100%; text-align: center;">
         <em style="text-decoration: underline dotted .1vw;">Fazendo</em> <em class="plus-sign">+</em> <em style="text-decoration: underline dotted .1vw;">pelo futuro que queremos.</em>
     </p>
     <img src="../static/bannerimage.jpg"></img>
