--- a/alexandria/alexandria_site/templates/alexandria_site/home.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/home.html
@@ -2,14 +2,14 @@
 
 {%block content%}
 <div class="home-banner" style="position:relative;" id="homeBanner">
-    <p style="font-weight: thin; font-style: italic; font-size: 8rem; position: absolute; color: #e9ffde; top: 40%; z-index: 20; opacity: 70%; font-family: roboto; width: 100%; text-align: center;">
+    <p style="font-weight: thin; font-style: italic; font-size: min(8rem, 8vw); position: absolute; color: #e9ffde; top: 40%; z-index: 20; opacity: 70%; font-family: roboto; width: 100%; text-align: center;">
         <em style="text-decoration: underline dotted .1vw;">Fazendo</em> <em class="plus-sign">+</em> <em style="text-decoration: underline dotted .1vw;">pelo futuro que queremos.</em>
     </p>
     <img src="../static/bannerimage.jpg"></img>
 </div>
 <hr class="theme-break">
 <div class="content">
-    <div class="content-section center" style="border: 0.1vw solid #5cc4dc; border-radius: 1vw; text-align: center; width: 80rem;">
+    <div class="content-section center" style="border: 0.1vw solid #5cc4dc; border-radius: 1vw; text-align: center; width: min(80rem, 90%);">
         <p class="title"> Sobre o Programa SOMAR</p>
         <p style="font-size: 1.7rem; padding:20px;">O SOMAR é um programa de impacto social do Sistema Fecomércio-RS/Sesc/Senac. <br> Por meio dele, serão executados projetos que transformem realidades das comunidades em que o sistema atua e que contribuam para os Objetivos de Desenvolvimento Sustentável, da ONU e bandeiras Fecomércio.
             Possuem como objetivo final a transformação de uma realidade vigente, sempre levando em consideração as questões sociais, ambientais e de governança das instituições. Sua execução está atrelada aos serviços ofertados pelo Sistema e seus públicos atendidos.
